Changed huge gap issue in contact me section

--- a/stylesheet/style.scss
+++ b/stylesheet/style.scss
@@ -634,7 +634,7 @@ html {
     }
 
     .contact-me-container {
-        height: 45%;
+        height: 35%;
     }
 }
 
